--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -10,6 +10,15 @@
             <div class="form-group">
                 <input type="file" name="file" class="form-control-file">
             </div>
+            <div class="form-group">
+                <label for="header_row">Header Row:</label>
+                <input type="number" name="header_row" class="form-control" min="0" required>
+                <small class="form-text text-muted">Enter '0' if there is no header.</small>
+            </div>
+            <div class="form-group">
+                <label for="first_row_that_contains_data">First Row with Data:</label>
+                <input type="number" name="first_row_that_contains_data" class="form-control" min="1" required>
+            </div>
             <button type="submit" class="btn btn-primary">Upload</button>
         </form>
     </div>
