--- a/website/templates/global_attributes.html
+++ b/website/templates/global_attributes.html
@@ -23,8 +23,7 @@
 
 <br><h3>Global attributes</h3><br>
 
-
-<form method="POST" action="/">
+<form method="POST">
 
     <table class="table">
         <thead>
@@ -36,25 +35,25 @@
             </tr>
         </thead>
         <tbody>
-            {% for index, row in rows %}
+            {% for attribute in json_data %}
             <tr>
-                <td>{{ row['Attribute'] }}</td>
-                <td>{{ row['Description'] }}</td>
-                <td>{{ row['Comment'] }}</td>
+                <td>{{ attribute['Attribute'] }}</td>
+                <td>{{ attribute['Description'] }}</td>
+                <td>{{ attribute['Comment'] }}</td>
                 <td>
-                    {% if row['format'] == 'number' %}
-                    <input type="number" step="0.0001" min="{{ row['min'] }}" max="{{ row['max'] }}" class="form-control" name="{{ row['Attribute'] }}" {% if row['Requirement'] == 'Required' %}required{% endif %}>
-                    {% elif row['choices'] != '' %}
-                    <select class="custom-select" name="{{ row['Attribute'] }}" aria-label="Default select example">
-                        <option selected="selected">{{ row['placeholder'] }}</option>
-                        {% for option in row['choices'].split('; ') %}
+                    {% if attribute['format'] == 'number' %}
+                    <input type="number" step="0.0001" min="{{ attribute['min'] }}" max="{{ attribute['max'] }}" value="{{ attribute['value'] }}" class="form-control" name="{{ attribute['Attribute'] }}" {% if attribute['Requirement'] == 'Required' %}required{% endif %}>
+                    {% elif attribute['choices'] and attribute['choices'] != '' %}
+                    <select class="custom-select" name="{{ attribute['Attribute'] }}" aria-label="Default select example">
+                        <option selected="selected">{{ attribute['value'] }}</option>
+                        {% for option in attribute['choices'].split('; ') %}
                         <option>{{option}}</option>
                         {% endfor %}
                     </select>
-                    {% elif row['Attribute'] == 'summary' %}
-                    <textarea class="form-control" id="{{ row['Attribute'] }}" name="{{ row['Attribute'] }}" rows="6"></textarea>
+                    {% elif attribute['Attribute'] == 'summary' %}
+                    <textarea class="form-control" id="{{ attribute['Attribute'] }}" name="{{ attribute['Attribute'] }}" attributes="6">{{ attribute['value'] }}</textarea>
                     {% else %}
-                    <input type="text" class="form-control" name="{{ row['Attribute'] }}" value="{{ row['placeholder'] }}">
+                    <input type="text" class="form-control" name="{{ attribute['Attribute'] }}" value="{{ attribute['value'] }}">
                     {% endif %}
                 </td>
             </tr>
@@ -62,7 +61,7 @@
         </tbody>
     </table>
 
-    <div class="form-group row">
+    <div class="form-group attribute">
         <div class="col-sm-10 offset-sm-2">
             <button type="submit" class="btn btn-primary">Submit</button>
         </div>
